--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.5.2",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1687.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
-    "@types/serverless": "^3.12.22",
-    "aws-lambda": "^1.0.7",
-    "serverless": "^4.2.4"
+    "@types/node": "^22.5.2"
   }
 }
