--- a/infrastructure/.env
+++ b/infrastructure/.env
@@ -4,7 +4,12 @@ AWS_SESSION_TOKEN=test
 LOCALSTACK_REGION=us-east-1
 
 SI_BACKEND_HOST=backend
-SI_BACKEND_PORT=8081
 SI_AWS_S3BUCKET=ebi-bucket
 SI_ISCAN_BYPASS=true
 LOCALSTACK_ENDPOINT=http://localstack:4566
+LOCALSTACK_PORT=4566
+LOCALSTACK_HOST=127.0.0.1
+LOCALSTACK_EDGE_PORT=4566
+
+HTTP_PROXY=127.0.0.1:9000
+HTTPS_PROXY=127.0.0.1:9000
