--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -3,13 +3,13 @@ version: "3.8"
 services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
-    image: localstack/localstack
+    image: localstack/localstack:latest
     ports:
       - "127.0.0.1:4566:4566" # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559" # external services port range
     environment:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
-      - DEBUG=${DEBUG:-0}
+      - DEBUG=1
       - HTTP_PROXY = 127.0.0.1:9000
       - HTTPS_PROXY = 127.0.0.1:9000
       - NO_PROXY = .s3.localhost.localstack.cloud,127.0.0.1,*.localhost
@@ -23,6 +23,10 @@ services:
       - LOCALSTACK_REGION=eu-west-1
       - AWS_SECRET_ACCESS_KEY=test
       - AWS_ACCESS_KEY_ID=test
+
+      - PERSISTENCE=/tmp/localstack/data
+
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+      # - "./localstack-data:/tmp/localstack/data"
